--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Jared Strader"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/headshot_Aug2024" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Research Scientist, SPARKlab, Department of Aeronautics and Astronautics, Massachusetts Institute of Technology"
   location         :
   email            : "jstrader@mit.edu"
