--- a/_config.yml
+++ b/_config.yml
@@ -113,12 +113,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jared ---"
+  name             : "Jared Strader"
   avatar           : "/assets/images/headshot_Aug2024.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Research Scientist, MIT"
   location         :
   email            : "jstrader@mit.edu"
-  # googlescholar    : "https://scholar.google.com/citations?user=iCJpaNwAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=iCJpaNwAAAAJ&hl=en"
+  linkedin         : "jared-strader"
+  orcid            : "https://orcid.org/0000-0002-3978-9542"
+  github           : "jaredstrader"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -138,9 +141,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
-    # - label: "Google Scholar"
-    #   icon: "fas fa-fw fa-graduation-cap"
-    #   url: "https://scholar.google.com/citations?user=iCJpaNwAAAAJ&hl=en"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-graduation-cap"
+      # url: "https://scholar.google.com/citations?user=iCJpaNwAAAAJ&hl=en"
 
 # Site Footer
 footer:
@@ -317,13 +320,22 @@ compress_html:
 # Defaults
 defaults:
   # _posts
+  # - scope:
+  #     path: ""
+  #     type: posts
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     read_time: true
+  #     comments: # true
+  #     share: true
+  #     related: true
+  # _publications
   - scope:
       path: ""
-      type: posts
+      type: publications
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: # true
       share: true
-      related: true
+      comments: true
